<resources>
    <string name="app_name">TabletVerwaltung</string>
    <string name="tvEinlesen">Gerät scannen</string>
    <string name="tvGeraete">Geräteübersicht</string>
    <string name="tvHistorie">Historie</string>
    <string name="tvEinstellungen">Einstellungen</string>
    <string name="tvLehrer">Lehrkraft</string>
    <string name="tvKurs">Kurs</string>
    <string name="tvEinstellungenSpeichern">Speichern</string>
    <string name="tvEinstellungenDescription">Hier können Sie die notwendigen Datenbankinformationen hinterlegen. Falls keine Verbindung zur Datenbank hergestellt werden kann, ist das Nutzen der App unmöglich.</string>
    <string name="alertEinstellungenSpeichernTitle">Änderungen speichern?</string>
    <string name="alertEinstellungenSpeichernMessage">Möchten Sie Ihre Änderungen speichern?</string>
    <string name="alertEinstellungenSpeichernNegativeButton">Nein</string>
    <string name="alertEinstellungenSpeichernPositiveButton">Ja</string>
    <string name="etUrl">Url zur Datenbank</string>
    <string name="etBenutzer">Benutzer</string>
    <string name="etPasswort">Passwort</string>



    <string name="tvKlassenweise">Kursweise ausgeben</string>

    <string name="tvVerliehen_prefix">Verliehen an:</string>
    <string name="tvVerliehenDurch_prefix">Ausgegeben von:</string>
    <string name="tvSeriennummer_prefix">Seriennummer:</string>
    <string name="geraete_verfuegbar">Verfügbar</string>

    <string name="tvVon">von:</string>
    <string name="tvBis">bis:</string>
    <string name="tvUhr">Uhr</string>

    <string name="toast_settings_datenbankverbindung_eintragen">Bitte tragen Sie alle notwendigen Daten ein, um zur Datenbank eine Verbindung herstellen zu können</string>
    <string name="toast_settings_datenbankverbindung_falsch">Verbindung zur Datenbank fehlgeschlagen</string>
    <string name="toast_settings_verbindung_fehlgeschlagen">Es konnte keine Verbindung zur Datenbank hergestellt werden</string>
    <string name="background_for_loading_screen">Background for Loading screen</string>
    <string name="tvLoading">LÄDT…</string>


    <string name="alertReaderBereitsVerliehenTitle">Gerät bereits verliehen</string>
    <string name="alertReaderBereitsVerliehenMessage">Das gescannte Gerät ist bereits verliehen. Möchten Sie es weiterverleihen oder zurücknehmen?</string>
    <string name="alertReaderBereitsVerliehenPositiveButton">verleihen</string>
    <string name="alertReaderBereitsVerliehenNegativeButton">zurücknehmen</string>

    <string name="alertReaderAnKlasseAusgebenTitle">Gerät an %kur_name% ausgeben?</string>
    <string name="alertReaderAnKlasseAusgebenMessage">Möchten Sie das Gerät an den Kurs "%kur_name%" ausgeben?</string>
    <string name="alertReaderAnKlasseAusgebenPositiveButton">Ja</string>
    <string name="alertReaderAnKlasseAusgebenNegativeButton">Nein</string>


    <string name="alertReaderAusleihen">Ausleihen</string>
    <string name="alertReaderAbbrechen">Abbrechen</string>
    <string name="alertReaderAnSchuelerAusgebenTitle">Wählen Sie einen Schüler</string>

    <string name="alertReaderkeineSchuelerInKlasse">Der ausgewählte Kurs enthält keine Schüler</string>

    <string name="toast_geraet_verliehen">Das Gerät wurde erfolgreich verliehen</string>
    <string name="toast_geraet_verliehen_fehler">Beim Verleihen trat ein Fehler auf</string>
    <string name="toast_geraet_zuruecknehmen">Das Gerät wurde erfolreich zurückgenommen</string>
    <string name="camera_image">Camera Image</string>
    <string name="device_image">Camera Image</string>
    <string name="border_box">Border Box</string>
    <string name="geraet_nicht_vorhanden">Das gescannte Gerät ist nicht in der Datenbank registriert. Wenden Sie sich an einen Administrator</string>


</resources>
