<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/rlEinlesen">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/ivEinlesen"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_einlesen"
                android:layout_marginBottom="40dp"
                android:contentDescription="Camera Image"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvEinlesen"
                android:id="@+id/tvEinlesen"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="85dp"
                android:textSize="18dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/rlGeraete" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/ivGeraete"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_geraete"
                android:layout_marginBottom="40dp"
                android:contentDescription="Camera Image"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGeraete"
                android:id="@+id/tvGeraete"
                android:textColor="@color/buttonTextColor"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="85dp"
                android:textSize="18dp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="30dp"
        android:layout_below="@+id/include"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLehrer"
            android:id="@+id/tvLehrer"
            android:textColor="@color/buttonTextColor"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:textSize="14dp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sLehrer"
            android:spinnerMode="dropdown"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@id/tvLehrer"
            android:layout_marginTop="20dp" />


        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvKlassenweise"
            android:id="@+id/swKlassenweise"
            android:checked="false"
            android:textColor="@color/white200"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_below="@+id/sLehrer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvKurs"
            android:id="@+id/tvKurs"
            android:textColor="@color/buttonTextColor"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_below="@+id/swKlassenweise"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spKlasse"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/tvKurs"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <include layout="@layout/loading_overlay" android:id="@+id/progress_overlay" />
</RelativeLayout>
